kubernetes/workload/05-ingress/app-ingress-pip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsa
  namespace: app
  labels:
    app: fsa
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth/token
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /auth/callback
        pathType: Prefix
        backend:
          service:
            name: fsa-fe
            port:
              number: 80
      - path: /businesses
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /business-icons
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /offers
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /offer-assistant
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /offer-images
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /marketplace
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /support
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: fsa-be
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: fsa-keycloak-http
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsa-fe
            port:
              number: 80
