kubernetes/workload/05-ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx/client_max_body_size: 10m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.68.219.101.242.nip.io
    secretName: app-tls-cert
  rules:
    - host: app.68.219.101.242.nip.io
      http:
        paths:
          - path: /auth/token
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /auth/callback
            pathType: Prefix
            backend:
              service:
                name: fsa-fe
                port:
                  number: 80
          - path: /businesses
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /offers
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /marketplace
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /support
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: fsa-be
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-fe
                port:
                  number: 80
